# importclib

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dzungvu/importclib/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gmath-bridge.cpp
app/src/main/java/com/dzungvu/importclib/: MainActivity.kt  MainActivityViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/dzungvu/importclib/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
